# StarWars_2

./: CMakeLists.txt
src/: battle.cc  battle.h  helper.cc  helper.h  imperialfleet.cc  imperialfleet.h  rebelfleet.cc  rebelfleet.h  tests.cpp
zadanie/: starwars2_example.cc  starwars2_tresc.txt
